# arrow-zarr

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md
.github/: rust.yml
.github/workflows/: rust.yml
benches/: gcs_bench.rs  s3_bench.rs  shared.rs
crates/arrow-zarr/: Cargo.toml
crates/arrow-zarr/src/: lib.rs
crates/arrow-zarr/src/table/: datafusion_filters.rs  table_provider.rs
crates/arrow-zarr/src/zarr_store_opener/: io_runtime.rs  zarr_errors.rs
crates/zarr-datafusion-python/: Cargo.toml  pyproject.toml
crates/zarr-datafusion-python/python/zarr_datafusion/: __init__.py
crates/zarr-datafusion-python/src/: lib.rs
src/: lib.rs
src/async_reader/: io_uring_utils.rs  mod.rs  zarr_read_async.rs
src/datafusion/: config.rs  file_opener.rs  helpers.rs  mod.rs  scanner.rs  table_factory.rs  table_provider.rs
src/errors/: mod.rs  zarr_errors.rs
src/reader/: codecs.rs  errors.rs  filters.rs  metadata.rs  metadata_v3.rs  mod.rs  zarr_read.rs
src/table/: config.rs  mod.rs  opener.rs  scanner.rs  table_provider.rs
src/zarr_store_opener/: filter.rs  io_runtime.rs  mod.rs  projection.rs  zarr_data_stream.rs  zarr_errors.rs
