[workspace]
members = ["crates/arrow-zarr", "crates/zarr-datafusion-python"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Maxime Dion <maxdion@gmail.com>"]
repository = "https://github.com/datafusion-contrib/arrow-zarr"
homepage = "https://github.com/datafusion-contrib/arrow-zarr"

[workspace.dependencies]
arrow-zarr = { path = "crates/arrow-zarr" }

# Arrow deps
arrow = { version = "55.2.0" }
arrow-array = { version = "55.2.0" }
arrow-schema = { version = "55.2.0" }
datafusion = { version = "49.0.0" }
tokio = { version = "1.46.1", features = ["rt", "macros", "net", "rt-multi-thread"] }
