[package]
name = "arrow-zarr"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords = ["arrow"]
rust-version = "1.86"

[features]
default = []
icechunk = ["dep:icechunk", "dep:zarrs_icechunk"]
datafusion = ["dep:datafusion"]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-stream = "0.3"
async-trait = { version = "0.1.89" }
bytes = { version = "1.10.1" }
chrono = { version = "0.4.42" }
datafusion = { workspace = true, optional = true }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
icechunk = { version = "0.3.17", optional = true }
itertools = { version = "0.14.0" }
ndarray = { version = "^0.16.1" }
object_store = { version = "0.12.0", features = ["aws", "gcp"] }
tokio = { workspace = true }
tokio-test = { version = "0.4.4" }
zarrs = { version = "0.22.1", features = ["async"] }
zarrs_filesystem = { version = "0.3.0" }
zarrs_icechunk = { version = "0.4.0", optional = true }
zarrs_metadata = { version = "0.6.0" }
zarrs_object_store = { version = "0.5.0" }
zarrs_storage = { version = "0.4.0", features = ["async"] }

[dev-dependencies]
aws-config = { version = "1.5.18" }
aws-sdk-s3 = { version = "1.78.0" }
criterion = { version = "0.7.0", features = ["async_tokio"] }
walkdir = { version = "2.5.0" }


[[bench]]
name = "s3_bench"
harness = false
required-features = ["icechunk"]
