[package]
name = "zarr-datafusion-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "zarr_datafusion_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
arrow-zarr = { workspace = true, features = ["datafusion", "icechunk"] }
datafusion = { workspace = true }
datafusion-ffi = "49.0.0"
tokio = { workspace = true }
